--- a/config.toml
+++ b/config.toml
@@ -104,7 +104,7 @@ uglyURLs = false
     # 头像
     avatar = "/icons/apple-touch-icon.png"
     # 网站（默认值：baseURL）
-    website = "https://io-oi.me/"
+    website = "https://yichengme.site/"
     # 推特
     # twitter = "reuixiy"
 
@@ -309,11 +309,11 @@ uglyURLs = false
     # 3. posts     文章摘要
     # 4. page      普通页面
 
-    homeLayout = "posts"
+    homeLayout = "page"
 
     ## 「诗意人生」
     # 诗句，支持 Markdown
-    homePoetry = []
+    homePoetry = [""]
     # 底部链接的内间距，单位：em
     homeLinksPadding = 1
 
@@ -620,7 +620,7 @@ uglyURLs = false
     valineHighlight = true
     valineAvatarForce = false
     valineRecordIP = false
-    valineServerURLs = ""
+    valineServerURLs = "https://yichengme.site"
     valineEmojiCDN = "https://valinecdn.bili33.top/"
     valineEmojiMaps = {"卖萌"="bilibili2233/[2233娘_卖萌].png","吃惊"="bilibili2233/[2233娘_吃惊].png","吐魂"="bilibili2233/[2233娘_吐魂].png","喝水"="bilibili2233/[2233娘_喝水].png","困惑"="bilibili2233/[2233娘_困惑].png","大哭"="bilibili2233/[2233娘_大哭].png","大笑"="bilibili2233/[2233娘_大笑].png","委屈"="bilibili2233/[2233娘_委屈].png","怒"="bilibili2233/[2233娘_怒].png","无言"="bilibili2233/[2233娘_无言].png","汗"="bilibili2233/[2233娘_汗].png","疑问"="bilibili2233/[2233娘_疑问].png","第一"="bilibili2233/[2233娘_第一].png","耶"="bilibili2233/[2233娘_耶].png","郁闷"="bilibili2233/[2233娘_郁闷].png"}
     valineEnableQQ = false
