--- a/config.toml
+++ b/config.toml
@@ -618,7 +618,7 @@ uglyURLs = false
     valineLang = "zh-cn"
     valineVisitor = false
     valineHighlight = true
-    valineAvatarForce = false
+    valineAvatarForce = true
     valineRecordIP = false
     valineServerURLs = ""
     valineEmojiCDN = "https://valinecdn.bili33.top/"
