--- a/config.toml
+++ b/config.toml
@@ -1361,7 +1361,7 @@ uglyURLs = false
     #      次将生成的 algolia.json 文件上传到
     #      Algolia
 
-    enableAlgoliaSearch = false
+    enableAlgoliaSearch = true
 
     algoliaAppId = "FQ3FDCRGP7"
     algoliaApiKey = "8f0d93275651f032742abfce5c6c6e58"
