--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 ALGOLIA_APP_ID="FQ3FDCRGP7"
 ALGOLIA_INDEX_NAME="blog"
-ALGOLIA_INDEX_FILE="docs/search.json"
+ALGOLIA_INDEX_FILE="docs/algolia.json"
 ALGOLIA_ADMIN_KEY="b18167705dd5d703549ebce7e4926a99"
