--- a/themes/meme/data/Socials.toml
+++ b/themes/meme/data/Socials.toml
@@ -5,26 +5,26 @@
 #
 # For the `icon`, see SVG.toml
 
-[[socials]]
-    id = "rss"
-    url = "/rss.xml"
-    icon = "rss"
-    title = "RSS"
-    weight = 1
+# [[socials]]
+#     id = "rss"
+#     url = "/rss.xml"
+#     icon = "rss"
+#     title = "RSS"
+#     weight = 1
 
 [[socials]]
     id = "email"
     url = "mailto:engine74396@gmail.com"
     icon = "envelope"
     title = "Email"
-    weight = 2
+    weight = 1
 
 [[socials]]
     id = "github"
     url = "https://github.com/enginewang"
     icon = "github"
     title = "GitHub"
-    weight = 3
+    weight = 2
 
 # [[socials]]
 #     id = "twitter"
@@ -33,9 +33,9 @@
 #     title = "Twitter"
 #     weight = 4
 #
-# [[socials]]
-#     id = "telegram"
-#     url = "https://t.me/yixiuer"
-#     icon = "telegram"
-#     title = "Telegram"
-#     weight = 5
+[[socials]]
+    id = "telegram"
+    url = "https://t.me/enginewang"
+    icon = "telegram"
+    title = "Telegram"
+    weight = 3
