--- a/config.toml
+++ b/config.toml
@@ -412,7 +412,7 @@ uglyURLs = false
     # 列表页面
 
     # 宽度
-    listWidth = 50
+    listWidth = 60
     # 说明：如果留空（""），则用 42 作为默认值
     #      单位：em
 
@@ -1042,7 +1042,7 @@ uglyURLs = false
     # 文章版权
 
     # 是否开启
-    enablePostCopyright = false
+    enablePostCopyright = true
 
     # 是否显示（全局设置）
     displayPostCopyright = true
@@ -1054,7 +1054,7 @@ uglyURLs = false
     # 文章更新徽章
 
     # 是否开启
-    enablePostUpdatedBadge = false
+    enablePostUpdatedBadge = true
 
     # 是否显示（全局设置）
     displayUpdatedBadge = true
