--- a/config.toml
+++ b/config.toml
@@ -1062,7 +1062,7 @@ uglyURLs = false
     #      的优先级高于此处
 
     # 是否添加 `title`
-    enableBadgeTitle = true
+    enableBadgeTitle = false
     # `title` 的前缀
     badgeTitlePrefix = "Updated @ "
 
